# HotelBookingEngine

./: .gitignore  API_DOCUMENTATION.md  BOOKING_API_DOCUMENTATION.md  DATA_POPULATION_GUIDE.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FIXES_IMPLEMENTED.md  HowTo_RUN.md  QUICK_REFERENCE.md  README.md  SERVER_MIGRATION.md  TODO.md  deploy.sh  deployment.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fix-dns.sh  fix-registry.sh  login_payload.json  nginx.conf  pyproject.toml  quick-test.ps1  railway.json  requirements.txt  test-api.ps1  test_api.py
.github/workflows/: deploy.yml
hotel_booking/: .env  .gitignore  complete_api_test.py  requirements.txt  run_dev.ps1  seed_demo.py  start_dev.sh
hotel_booking/accounts/: admin.py  apps.py  forms.py  middleware.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
hotel_booking/accounts/migrations/: 0001_initial.py  0004_alter_customuser_gender_blacklistedtoken.py
hotel_booking/bookings/: admin.py  apps.py  booking_flow_api.py  booking_services.py  email_service.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
hotel_booking/core/: admin.py  dashboard_urls.py  dashboard_views.py  health.py  models.py  serializers.py  services.py  spectacular_extensions.py  spectacular_hooks.py  urls.py  validators.py  views.py
hotel_booking/hotel_booking/: asgi.py  deployment.py  production.py  settings.py  urls.py  wsgi.py
hotel_booking/manager/: admin.py  apps.py  forms.py  urls.py  views.py  views_cbv.py
hotel_booking/offers/: admin.py  models.py  permissions.py  serializers.py  views.py
hotel_booking/payments/: services.py  views.py
hotel_booking/templates/: base.html  dashboard.html
(+43 files in other folders)
